# Curso_IOS_prints

./: bookmarks_12_5_22.html
Observable.playground/: Contents.swift
Observable.playground/playground.xcworkspace/xcuserdata/iurymiguel.xcuserdatad/: UserInterfaceState.xcuserstate
Pós/Pós/Módulo 1/Fundamentos ML/: PyPI-Recovery-Codes-iurymiguel-2025-04-04T23_37_40.520563.txt  app.py  app_hugging_face.py  index.py
Pós/Pós/Módulo 1/Fundamentos ML/hugging-face-example/: .env  main.py  publish.py  teste.py
Pós/Pós/Módulo 1/Fundamentos ML/invest-api-main/: requirements.txt
Pós/Pós/Módulo 1/Fundamentos ML/pyinvest/: create_structure.sh
Pós/Pós/Módulo 1/MLET - Material complementar/: Fundamentos de IA e Machine Learning - Material Complementar.docx
Pós/Pós/Módulo 1/Python para ML e IA/fast_api_project1/: pyproject.toml
Pós/Pós/Módulo 1/Python para ML e IA/fast_api_project1/src/fast_api_project1/: main.py
Pós/Pós/Módulo 1/Python para ML e IA/intro_api/: app.py
Pós/Pós/Módulo 1/Python para ML e IA/modelo/: predictions.db
Pós/Pós/Módulo 1/Python para ML e IA/recipe/: app.py  config.py  swagger.py
Pós/Pós/Módulo 2/Big Data Pipelines/BigDataPipelinesPPTs/: Aula 01 - O que são.pptx
Pós/Pós/Módulo 2/Materials/BigDataPipelinesPPTs/: Aula 03 - Ferramentas Batch.pptx  Aula 04 - Ferramentas Stream.pptx
Pós/Pós/Módulo 2/Materials/BigDataPipelinesPPTs (1)/: Aula 02 - Stream vs Batch.pptx  Aula 05 - Ferramentas ETL.pptx
func.playground/: Contents.swift
func.playground/playground.xcworkspace/xcuserdata/iurymiguel.xcuserdatad/: UserInterfaceState.xcuserstate
(+53 files in other folders)
