[project]
name = "fast-api-project1"
version = "0.1.0"
description = ""
authors = [
    {name = "Iury da Rocha Miguel",email = "iurymig.sht@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]

[tool.poetry]
packages = [{include = "fast_api_project1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
